<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ryuhadouken.myappportfolio.MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/project1"
        android:id="@+id/button"
        android:textColor="#E8F5E9"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:background="#00E676"/>

    <Button
        android:layout_width="200dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:text="@string/project2a"
        android:id="@+id/button2"
        android:textColor="#E8F5E9"
        android:background="#00E676"
        android:layout_below="@+id/button"
        android:layout_alignStart="@+id/button3" />

    <Button
        android:layout_width="200dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:text="@string/project2b"
        android:id="@+id/button3"
        android:textColor="#E8F5E9"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:background="#00E676"/>

    <Button
        android:layout_width="200dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:text="@string/project3"
        android:id="@+id/button4"
        android:textColor="#E8F5E9"
        android:layout_below="@+id/button3"
        android:layout_alignStart="@+id/button3"
        android:background="#00E676"/>

    <Button
        android:layout_width="200dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:text="@string/project4"
        android:textColor="#E8F5E9"
        android:id="@+id/button5"
        android:layout_below="@+id/button4"
        android:layout_centerHorizontal="true"
        android:background="#00E676"/>

    <Button
        android:layout_width="200dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:text="@string/project5"
        android:textColor="#E8F5E9"
        android:id="@+id/button6"
        android:layout_below="@+id/button5"
        android:layout_centerHorizontal="true"
        android:background="#00E676"/>
</RelativeLayout>
